add CassetteBender(https://centrevillage.net/products/4) wavetable

--- a/osc/wt_test/Makefile
+++ b/osc/wt_test/Makefile
@@ -163,6 +163,9 @@ PRE_ALL:
 
 POST_ALL: package
 
+create_wavetable:
+	sh create_wavetable.sh
+
 $(OBJS): | $(BUILDDIR) $(OBJDIR) $(LSTDIR)
 
 $(BUILDDIR):
